Hid back button

--- a/homepageTest/Base.lproj/Main.storyboard
+++ b/homepageTest/Base.lproj/Main.storyboard
@@ -513,6 +513,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="gMK-c7-E5c"/>
-        <segue reference="Xl7-AQ-E3w"/>
+        <segue reference="fec-Mg-UjR"/>
     </inferredMetricsTieBreakers>
 </document>
